# SQLAlchemyStart

./: .gitignore  README.md  alembic.ini  pyproject.toml
data/: config.py  database.py  main.py  models.py  schemas.py
data/migrations/: env.py
data/migrations/versions/: 373a13cb824d_.py
data/queries/: core.py  orm.py
