[project]
name = "sql"
version = "0.1.0"
description = ""
authors = [
    {name = "GL1KK",email = "danya_serov05@internet.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "fastapi[all] (>=0.115.12,<0.116.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg (>=3.2.7,<4.0.0)",
    "psycopg-binary (>=3.2.7,<4.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
