[tool.poetry]
name = "sqlstart"
version = "0.1.0"
description = ""
authors = ["GL1KK <danya_serov05@internet.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.41"
fastapi = {extras = ["all"], version = "^0.115.12"}
pydantic-settings = "^2.9.1"
asyncpg = "^0.30.0"
psycopg = "^3.2.9"
psycopg-binary = "^3.2.9"
alembic = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
